<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="17dp"
        android:orientation="vertical">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etNombreCompleto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/etNombreCompleto"/>

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etFecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/etFecha"/>

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/etTelefono"/>

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/etEmail"/>

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/etDescripcion"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom">

        <Button
            android:id="@+id/btnSiguiente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnSiguiente"/>

    </LinearLayout>


</LinearLayout>