<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetalleContacto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="17dp"
        android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvConfirmarDatos"
        android:textAlignment="center"
        android:textSize="24sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvNombreCompleto"
            android:textSize="@dimen/tvConfirmar"
            />

            <TextView
                android:id="@+id/tvNombreCompleto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/tvConfirmar"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvFecha"
                android:textSize="@dimen/tvConfirmar"
                />

            <TextView
                android:id="@+id/tvFechaNacimiento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/tvConfirmar"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvTelefono"
                android:textSize="@dimen/tvConfirmar"
                />

            <TextView
                android:id="@+id/tvTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/tvConfirmar"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvEmail"
                android:textSize="@dimen/tvConfirmar"
                />

            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/tvConfirmar" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvDescripcion"
                android:textSize="@dimen/tvConfirmar"
                />

            <TextView
                android:id="@+id/tvDescripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/tvConfirmar"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="22dp"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btnEditarDatos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnEditarDatos"
            />

    </LinearLayout>

</LinearLayout>